# dsp_simulation

./: .gitignore  2048_1M.txt  2048_1M_0.txt  2048_1M_1.txt  CMakeLists.txt  README.md  main.cpp
functions/: build_signal.h  builders.h  fft.h  functions.h  process_complex.h  process_real.h  processing.h  script_builder.cc  script_builder.hh
test/: encode.cpp  frft.cpp  main.cpp  simulation.cpp
types/: complex_t.hpp  concepts.h  db_t.hpp  frequency_t.hpp  noise.h  signal_t.hpp
